.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: todoapp
  annotations:
    # 1. ENABLES the use of regex in the 'path' field
    nginx.ingress.kubernetes.io/use-regex: "true"
    # 2. Captures group (.*) and forwards it to the service
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx # Best practice to include
  rules:
    - http:
        paths:
          - path: /(.*)
            # This pathType tells Kubernetes to let the NGINX Implementation handle the path matching.
            pathType: ImplementationSpecific
            backend:
              service:
                name: todoapp-service
                port:
                  number: 80
